--- a/compose/production/docker-compose-template.yml
+++ b/compose/production/docker-compose-template.yml
@@ -50,12 +50,8 @@ services:
     volumes:
       - ${TNO_PROJ_DIR:-.}:${TNO_PROJ_DIR:-.}
       - ${TNO_SSHKEY}:/home/app.tno/.ssh/id_rsa
-    environment:
-      - PARSL_ENV=linea
-      - REMOTE_PIPELINE_ROOT=${TNO_PROJ_DIR:-.}
-      - PREDICT_OUTPUTS=${TNO_PROJ_DIR:-.}/data/predict_occultations
-      - DB_ADMIN_URI=${DB_ADMIN_URI}
-      - DB_CATALOG_URI=${DB_CATALOG_URI}
+    env_file:
+      - .env
 
   # Celery Workers (Tarefas do backend em background)
   celery_worker:
@@ -63,6 +59,15 @@ services:
     command: /start_worker.sh
     depends_on:
       - backend
+    restart: unless-stopped
+    deploy:
+      resources:
+        limits:
+          cpus: "10.0"
+          memory: 16G
+        reservations:
+          cpus: "15"
+          memory: 1G
 
   # Celery Beat (Tarefas agendadas do backend)
   celery_beat:
