--- a/frontend/user_docs/mkdocs.yml
+++ b/frontend/user_docs/mkdocs.yml
@@ -1,13 +1,21 @@
 site_name: LIneA Occultation Prediction Database
 
+theme:
+  name: readthedocs
+  highlightjs: true
+  hljs_languages:
+    - yaml
+    - rust
+
 nav:
-  - Home: 'index.md'
+  - Overview: 'index.md'
+  - Release Notes:
+      - Initial Release: 'release-notes.md'
   - User Guide:
       - Filter Events: 'user-guide/filter-events.md'
       - Occultation Details Page: 'user-guide/occultation-details-page.md'
       - Occultation Predictions Table: 'user-guide/occultation-predictions-table.md'
       - API: 'user-guide/api.md'
       - Citations: 'user-guide/citations.md'
-      - Release Notes: 'release-notes.md'
   - FAQ: 'faq.md'
-  - About: 'about.md'
+  # - About: 'about.md'
