Added Mailhog for test Django send emails localy #930

--- a/compose/local/nginx-proxy-template.conf
+++ b/compose/local/nginx-proxy-template.conf
@@ -10,11 +10,6 @@ upstream userdocs {
     server mkdocs:8000;
 }
 
-
-# upstream tnosora{
-#     server sora:8000;
-# }
-
 server {
     listen 8080;
 
@@ -154,8 +149,6 @@ server {
         # proxy_cache_bypass $http_upgrade;
     }
 
-
-
     # Celery Flower
     location /flower {
         proxy_pass http://celery_flower:5555;
@@ -167,5 +160,9 @@ server {
         rewrite ^/rabbitmq/(.*)$ /$1 break;
     }
 
-
+    # Mailhog Web UI
+    location /mailhog/ {
+        proxy_pass http://mailhog:8025/;
+        rewrite ^/rabbitmq/(.*)$ /$1 break;
+    }
 }
