--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -62,7 +62,6 @@ pandas==1.5.1
 Pillow==9.3.0
 plotly==5.14.1
 prometheus-client==0.16.0
-prompt-toolkit==3.0.38
 psycopg2-binary==2.9.5
 pycparser==2.21
 pyerfa==2.0.0.1
@@ -97,3 +96,4 @@ vine==5.0.0
 wcwidth==0.2.6
 webencodings==0.5.1
 zipp==3.15.0
+commitizen
