--- a/.cz.toml
+++ b/.cz.toml
@@ -1,8 +1,8 @@
 [tool.commitizen]
 name = "cz_conventional_commits"
-tag_format = "$version"
+tag_format = "v$major.$minor.$patch$prerelease"
 version_scheme = "semver"
-version = "3.2.0"
+version = "v3.1.0"
 update_changelog_on_bump = true
 version_files = [
   "backend/__version__.py",
