--- a/.cz.toml
+++ b/.cz.toml
@@ -2,7 +2,7 @@
 name = "cz_conventional_commits"
 tag_format = "v$major.$minor.$patch$prerelease"
 version_scheme = "semver"
-version = "v3.1.0"
+version = "3.2.0"
 update_changelog_on_bump = true
 version_files = [
   "backend/__version__.py",
