--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "history": "5.3.0",
     "i": "^0.3.6",
     "leaflet": "^1.9.4",
+    "leaflet-easyprint": "^2.1.9",
     "moment": "^2.29.4",
     "nookies": "^2.5.2",
     "npm": "9.1.2",
@@ -40,6 +41,7 @@
     "react-images": "1.2.0-beta.7",
     "react-lazyload": "3.2.0",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-easyprint": "^2.0.0",
     "react-plotly.js": "^2.3.0",
     "react-query": "^3.39.2",
     "react-router-dom": "6.4.3",
@@ -47,6 +49,7 @@
     "react-select": "^5.7.0",
     "react-sizeme": "3.0.2",
     "react-syntax-highlight": "^15.3.1",
+    "react-to-print": "^2.15.1",
     "react-youtube": "10.1.0",
     "update-browserslist-db": "^1.0.13",
     "uuid": "^9.0.1",
