--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -36,6 +36,7 @@ django-url-filter==0.3.15
 django-environ==0.11.2
 djangorestframework==3.14.0
 drf-spectacular==0.27.1
+drfpasswordless==1.5.9
 enum-compat==0.0.3
 Fiona==1.9.4.post1
 flower==1.2.0
