--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "postcss-normalize": "^10.0.1",
     "prop-types": "15.8.1",
     "react": "^18.2.0",
+    "react-component-export-image": "^1.0.6",
     "react-date-range": "^1.0.3",
     "react-dom": "^18.2.0",
     "react-images": "1.2.0-beta.7",
