--- a/backend/tno/fixtures/initial_data.yaml
+++ b/backend/tno/fixtures/initial_data.yaml
@@ -33,8 +33,8 @@
     name: gaia_dr3
     display_name: GAIA DR3
     database: prod_gavo
-    schema: gaia
-    tablename: dr3
+    schema: gaia_dr3
+    tablename: source
     ra_property: ra
     dec_property: dec
     registration_date: 2024-04-08 12:00:00.554084+00:00
