--- a/.cz.toml
+++ b/.cz.toml
@@ -1,6 +1,6 @@
 [tool.commitizen]
 name = "cz_conventional_commits"
-tag_format = "v$major.$minor.$patch$prerelease"
+tag_format = "$major.$minor.$patch$prerelease"
 version_scheme = "semver"
 version = "3.1.0"
 update_changelog_on_bump = true
