--- a/frontend/user_docs/mkdocs.yml
+++ b/frontend/user_docs/mkdocs.yml
@@ -10,13 +10,15 @@ theme:
 nav:
   - Overview: 'index.md'
   - Release Notes:
-      - Gaia DR3 Update: 'release-notes/latest-release.md' # rename to 'release-notes/02-2024-gaia-dr3-update.md' upon new release
+      - Predictions with CA Uncertainty: 'release-notes/latest-release.md'
+      - Gaia DR3 Update: 'release-notes/02-2024-gaia-dr3-release.md' # rename to 'release-notes/02-2024-gaia-dr3-update.md' upon new release
       - Initial Release: 'release-notes/01-2024-initial-release.md'
   - User Guide:
       - Filter Events: 'user-guide/filter-events.md'
       - Occultation Details Page: 'user-guide/occultation-details-page.md'
       - Occultation Predictions Table: 'user-guide/occultation-predictions-table.md'
       - API: 'user-guide/api.md'
+      - Python Module: 'user-guide/python_module.md'
       - Citations: 'user-guide/citations.md'
   - FAQ: 'faq.md'
   # - About: 'about.md'
