--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "react-images": "1.2.0-beta.7",
     "react-lazyload": "3.2.0",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-night-region": "^1.1.0",
     "react-plotly.js": "^2.3.0",
     "react-query": "^3.39.2",
     "react-router-dom": "6.4.3",
