--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -66,6 +66,7 @@ prometheus-client==0.16.0
 psycopg2-binary==2.9.5
 pycparser==2.21
 pyerfa==2.0.0.1
+pymemcache==4.0.0
 pykdtree==1.3.9
 pyparsing==3.0.9
 pyproj==3.6.1
