--- a/compose/production/docker-compose-template.yml
+++ b/compose/production/docker-compose-template.yml
@@ -93,3 +93,11 @@ services:
       - .env
     volumes:
       - rabbitmq-data:/var/lib/rabbitmq/
+  # Memory Cache: Memcached
+  # Documentation: https://hub.docker.com/r/bitnami/memcached
+  memcached:
+    image: bitnami/memcached
+    environment:
+      - MEMCACHED_CACHE_SIZE=128
+      - MEMCACHED_THREADS=4
+      - MEMCACHED_MAX_ITEM_SIZE=8388608
