--- a/compose/testing/docker-compose-template.yml
+++ b/compose/testing/docker-compose-template.yml
@@ -95,3 +95,12 @@ services:
       RABBITMQ_DEFAULT_VHOST: ${RABBITMQ_DEFAULT_VHOST:-tno_vhost}
     volumes:
       - rabbitmq-data:/var/lib/rabbitmq/
+
+  # Memory Cache: Memcached
+  # Documentation: https://hub.docker.com/r/bitnami/memcached
+  memcached:
+    image: bitnami/memcached
+    environment:
+      - MEMCACHED_CACHE_SIZE=128
+      - MEMCACHED_THREADS=4
+      - MEMCACHED_MAX_ITEM_SIZE=8388608
