BSPs from JPL can now be downloaded independently of the prediction process

--- a/compose/local/docker-compose-template.yml
+++ b/compose/local/docker-compose-template.yml
@@ -56,6 +56,7 @@ services:
     volumes:
       - ${TNO_PROJ_DIR:-.}/predict_occultation:/app
       - ${TNO_PROJ_DIR:-.}/data/predict_occultations:/app/outputs/predict_occultations
+      - ${TNO_PROJ_DIR:-.}/data/asteroids:/app/inputs/
     env_file:
       - .env
 
