--- a/compose/testing/docker-compose-template.yml
+++ b/compose/testing/docker-compose-template.yml
@@ -28,10 +28,14 @@ services:
       - ${TNO_PORT:-8060}:8080
     volumes:
       - ${TNO_PROJ_DIR:-.}/nginx_proxy.conf:/etc/nginx/conf.d/default.conf
-      - ${TNO_PROJ_DIR:-.}/data/public:/var/www/data
+      #- ${TNO_PROJ_DIR:-.}/data/public:/var/www/data
+      - ${TNO_PROJ_DIR:-.}/data:/var/www/data
       - ${TNO_PROJ_DIR:-.}/data/maps:/var/www/data/maps
+      - ${TNO_PROJ_DIR:-.}/data/tmp:/var/www/data/tmp
+      # Diretório de mapas compartilhado com ambiente de produção.
+      #- /lustre/t1/apps/app.tno/tno_prod/data/maps:/var/www/data/maps
       # - ${TNO_PROJ_DIR:-.}/logs/:/var/log/nginx/
-      # - ${TNO_PROJ_DIR:-.}/data/database_subset:/var/www/data/database_subset
+      - /lustre/t1/apps/app.tno/data_sample:/var/www/data/database_subset
     depends_on:
       - backend
       - rabbit
