--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "filesize": "10.0.5",
     "history": "5.3.0",
     "i": "^0.3.6",
+    "leaflet": "^1.9.4",
     "moment": "^2.29.4",
     "nookies": "^2.5.2",
     "npm": "9.1.2",
@@ -38,6 +39,7 @@
     "react-dom": "^18.2.0",
     "react-images": "1.2.0-beta.7",
     "react-lazyload": "3.2.0",
+    "react-leaflet": "^5.0.0",
     "react-plotly.js": "^2.3.0",
     "react-query": "^3.39.2",
     "react-router-dom": "6.4.3",
