--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,23 +25,23 @@ repos:
         name: isort (python)
         args: ['--profile', 'black', '--skip', 'migrations']
         exclude: ^(migrations/|backend/old_apps/)
-  - repo: https://github.com/pre-commit/mirrors-eslint
-    rev: v8.56.0
-    hooks:
-      - id: eslint
-        name: Eslint
-        # entry: bash -c 'cd frontend && eslint . --fix --max-warnings=0'
-        entry: bash -c 'cd frontend && npm run lint && npm run format'
-        additional_dependencies:
-          - eslint@8.28.0
-          - eslint-config-airbnb@19.0.4
-          - eslint-config-prettier@8.5.0
-          - eslint-plugin-react@7.14.3
-          - eslint-plugin-import@2.18.2
-          - eslint-plugin-react-hooks@4.6.0
-          - eslint-config-react-app@7.0.1
-          - babel-eslint@6.1.2
-          - prettier@2.8.0
+  # - repo: https://github.com/pre-commit/mirrors-eslint
+  #   rev: v8.56.0
+  #   hooks:
+  #     - id: eslint
+  #       name: Eslint
+  #       # entry: bash -c 'cd frontend && eslint . --fix --max-warnings=0'
+  #       entry: bash -c 'cd frontend && npm run lint && npm run format'
+  #       additional_dependencies:
+  #         - eslint@8.28.0
+  #         - eslint-config-airbnb@19.0.4
+  #         - eslint-config-prettier@8.5.0
+  #         - eslint-plugin-react@7.14.3
+  #         - eslint-plugin-import@2.18.2
+  #         - eslint-plugin-react-hooks@4.6.0
+  #         - eslint-config-react-app@7.0.1
+  #         - babel-eslint@6.1.2
+  #         - prettier@2.8.0
   # - repo: local
   #   hooks:
   #     - id: frontend_lint
