refactor(frontend/package.json-frontend/yarn.lock): Instalação dos plugins leaflet-terminator e leaflet-boundary-canvas

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
+    "@joergdietrich/leaflet.terminator": "^1.1.0",
     "@mui/icons-material": "^5.10.16",
     "@mui/lab": "^5.0.0-alpha.111",
     "@mui/material": "^5.10.17",
@@ -28,6 +29,7 @@
     "history": "5.3.0",
     "i": "^0.3.6",
     "leaflet": "^1.9.4",
+    "leaflet-boundary-canvas": "^1.0.0",
     "leaflet-terminator": "^0.1.0",
     "moment": "^2.29.4",
     "nookies": "^2.5.2",
