--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,9 +25,11 @@
     "d3": "7.6.1",
     "date-fns": "^2.0.0-beta.5",
     "dayjs": "^1.11.7",
+    "file-saver": "^2.0.5",
     "filesize": "10.0.5",
     "history": "5.3.0",
     "i": "^0.3.6",
+    "jszip": "^3.10.1",
     "leaflet": "^1.9.4",
     "leaflet-boundary-canvas": "^1.0.0",
     "leaflet-terminator": "^0.1.0",
