--- a/frontend/user_docs/mkdocs.yml
+++ b/frontend/user_docs/mkdocs.yml
@@ -10,8 +10,9 @@ theme:
 nav:
   - Overview: 'index.md'
   - Release Notes:
-      - Predictions with CA Uncertainty: 'release-notes/latest-release.md'
-      - Gaia DR3 Update: 'release-notes/02-2024-gaia-dr3-release.md' # rename to 'release-notes/02-2024-gaia-dr3-update.md' upon new release
+      - Dynamic Maps: 'release-notes/latest-release.md' # rename to 'release-notes/**-2024-dynamic-maps.md' upon new release
+      - Predictions with CA Uncertainty: 'release-notes/03-2024-ca-uncertainties.md'
+      - Gaia DR3 Update: 'release-notes/02-2024-gaia-dr3-release.md'
       - Initial Release: 'release-notes/01-2024-initial-release.md'
   - User Guide:
       - Filter Events: 'user-guide/filter-events.md'
