Added scripts for analise table performance

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,10 +4,7 @@
   "name": "TNO Devcontainer",
   // Update the 'dockerComposeFile' list if you have more compose files or use different names.
   // The .devcontainer/docker-compose.yml file contains any overrides you need/want to make.
-  "dockerComposeFile": [
-    "../docker-compose.yml",
-    "docker-compose.yml"
-  ],
+  "dockerComposeFile": ["../docker-compose.yml", "docker-compose.yml"],
   // The 'service' property is the name of the service for the container that VS Code should
   // use. Update this value and .devcontainer/docker-compose.yml to the real service name.
   "service": "vscode",
@@ -16,10 +13,7 @@
   "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
   // Features to add to the dev container. More info: https://containers.dev/features.
   "features": {
-    "ghcr.io/devcontainers/features/common-utils:2": {},
-    // "ghcr.io/devcontainers-contrib/features/black:2": {},
-    // "ghcr.io/devcontainers-contrib/features/coverage-py:2": {},
-    // "ghcr.io/devcontainers-contrib/features/isort:2": {},
+    // "ghcr.io/devcontainers/features/common-utils:2": {},
     "ghcr.io/devcontainers-contrib/features/pre-commit:2": {},
     "ghcr.io/devcontainers-contrib/features/zsh-plugins:0": {},
     "ghcr.io/stuartleeks/dev-container-features/shell-history:0": {},
@@ -42,7 +36,11 @@
     "vscode": {
       "settings": {
         "terminal.integrated.defaultProfile.linux": "zsh",
-        "terminal.integrated.profiles.linux": { "zsh": { "path": "/bin/zsh" } },
+        "terminal.integrated.profiles.linux": {
+          "zsh": {
+            "path": "/bin/zsh"
+          }
+        },
         "editor.tabSize": 2,
         "editor.formatOnPaste": true,
         "editor.formatOnSave": true, // hero!
