Upgrade Dockerfile and gfortran to latest version

--- a/predict_occultation/Dockerfile
+++ b/predict_occultation/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:buster-slim as base
+FROM debian:bookworm-slim as base
 # FROM ubuntu:20.04 as base
 
 ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
@@ -6,15 +6,22 @@ ENV PATH /opt/conda/bin:$PATH
 
 # Instalacao do Gfortran 7 e Miniconda
 RUN set -x && \
+    # SOBRESCREVE sources.list para usar repositórios arquivados do BUSTER
+    # echo "deb [trusted=yes] http://archive.debian.org/debian buster main non-free contrib" > /etc/apt/sources.list && \
+    # echo "deb-src [trusted=yes] http://archive.debian.org/debian buster main non-free contrib" >> /etc/apt/sources.list && \
+    # echo "deb [trusted=yes] http://archive.debian.org/debian-security buster/updates main non-free contrib" >> /etc/apt/sources.list && \
+    # \
     apt-get update --fix-missing && \
     apt-get install -y --no-install-recommends \
     gcc \
-    gfortran-7 \
+    gfortran \
     ca-certificates \
     git \
     ssh \
     wget \
     rsync \
+    procps \
+    build-essential \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* \
     && mkdir -p /opt/conda \
@@ -38,11 +45,11 @@ FROM base as praia_occ
 ADD praia_occ_src /tmp/praia_occ_src
 RUN mkdir /tmp/praia_occ \
     && cd /tmp/praia_occ_src \
-    && gfortran-7 geradata.f -o geradata spicelib.a \
+    && gfortran geradata.f -o geradata spicelib.a \
     && mv geradata /tmp/praia_occ \
-    && gfortran-7 elimina.f -o elimina \
+    && gfortran elimina.f -o elimina \
     && mv elimina /tmp/praia_occ \
-    && gfortran-7 PRAIA_occ_star_search_12.f -o PRAIA_occ_star_search_12 \
+    && gfortran PRAIA_occ_star_search_12.f -o PRAIA_occ_star_search_12 \
     && mv PRAIA_occ_star_search_12 /tmp/praia_occ \
     # 	&& gfortran-7 gerapositions.f -o gerapositions \
     # 	&& mv gerapositions /usr/local/bin/ \
