Removes PredictionJobStatus and related components
Eliminates the PredictionJobStatus model and its associated admin and serializer components to simplify the codebase.

Refactors relevant files to ensure continued functionality without the removed components.

Updates the Dockerfile to create a logs directory with appropriate permissions.

Cleans up unused imports and comments in the run_pred_occ.py script.

--- a/predict_occultation/Dockerfile
+++ b/predict_occultation/Dockerfile
@@ -134,6 +134,8 @@ COPY --chown=${USERNAME}:ton --chmod=2775 environment.py3.yml ${APP_HOME}
 
 RUN chmod -R =2775 ${PIPELINE_ROOT} \
     && chmod =2775 ${APP_HOME} \
+    && mkdir -p ${APP_HOME}/logs \
+    && chmod =2775 ${APP_HOME}/logs \
     && mv de440.bsp ${PIPELINE_PATH}/$BSP_PLANETARY_NAME \
     && mv naif0012.tls ${PIPELINE_PATH}/$LEAP_SECOND_NAME
 
