--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,13 +53,14 @@
     "react-sizeme": "3.0.2",
     "react-syntax-highlight": "^15.3.1",
     "react-youtube": "10.1.0",
+    "serve": "^14.2.4",
     "update-browserslist-db": "^1.0.13",
     "uuid": "^9.0.1",
     "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts --max_old_space_size=8192 --optimize-for-size build --verbose",
+    "build": "GENERATE_SOURCEMAP=false && react-scripts --max_old_space_size=8192 --optimize-for-size build --verbose",
     "build_dashboard": "REACT_APP_BUILD_TARGET=DashboardApp BUILD_PATH=/build/dashboard PUBLIC_URL=/dashboard react-scripts --max_old_space_size=8192 --optimize-for-size build --verbose",
     "build_public": "REACT_APP_BUILD_TARGET=PublicApp BUILD_PATH=/build/public_page react-scripts --max_old_space_size=8192 --optimize-for-size build --verbose",
     "test": "react-scripts test",
